Validerar korrekt nu.

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deliver | Contact Us</title>
-    <link rel="icon" href="img/title-logo.png" type="image/icon type">
+    <link rel="icon" href="img/title-logo.png">
 </head>
 <body>
     <nav>
@@ -25,40 +25,15 @@
     </nav>
 
     <div class="bg-primary h-100 w-100 text-center" id="fadein">
-        <img src="img/D-logo.png">
+        <img src="img/D-logo.png" alt="logo">
     </div>
 
     <div class="bg-dark h-100 w-100" id="menu">
         <div class="text-center h-75 w-100 margin mb-5 pt-5 d-flex align-items-center justify-content-center">
-            <div class="menuHover">
+            <div class="menu-hover">
                 <a class="text-white d-block" href="index.html">HOME</a>
                 <a class="text-white d-block" href="about.html">ABOUT</a>
                 <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO ▾</a>
-                <div class="text-center" id="dropdown">
-                    <a class="text-white d-block" href="development.html">Web Development</a>
-                    <a class="text-white d-block" href="social.html">Social Media Marketing</a>
-                    <a class="text-white d-block" href="hosting.html">Server Hosting</a>
-                </div>
-                <a class="text-white d-block" href="contact.html">CONTACTS</a>
-            </div>
-        </div>
-        <div class="d-flex justify-content-center text-center">
-            <div class="w-25 px-5">
-                <a href="https://instagram.com"><img class="icon" src="img/instagram.png" alt="instagram icon"></a>
-                <a href="https://twitter.com"><img class="icon" src="img/twitter.png" alt="twitter icon"></a>
-                <a href="https://facebook.com"><img class="icon" src="img/facebook.png" alt="facebook icon"></a>
-                <a href="https://linkedin.com"><img class="icon" src="img/linkedin.png" alt="linkedin icon"></a>
-                <a href="https://reddit.com"><img class="icon" src="img/reddit.png" alt="reddit icon"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="bg-dark w-100" id="menu">
-        <div class="text-center h-75 w-25 margin mb-5 pt-5 d-flex align-items-center justify-content-center">
-            <div class="menuHover">
-                <a class="text-white d-block" href="index.html">HOME</a>
-                <a class="text-white d-block" href="about.html">ABOUT</a>
-                <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO</a>
                 <div class="text-center" id="dropdown">
                     <a class="text-white d-block" href="development.html">Web Development</a>
                     <a class="text-white d-block" href="social.html">Social Media Marketing</a>
@@ -123,7 +98,7 @@
             <h3>Phone</h3>
             <input type="tel" placeholder="123-456-789">
             <h3>Message *</h3>
-            <textarea name="" id="" rows="1" placeholder="Write your message here" required></textarea>
+            <textarea rows="1" placeholder="Write your message here" required></textarea>
             <div class="contact">
                 <input class="zoom" type="submit" onclick="validation();" value="SEND">
             </div>
