--- a/hosting.html
+++ b/hosting.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deliver | Server Hosting</title>
-    <link rel="icon" href="img/title-logo.png" type="image/icon type">
+    <link rel="icon" href="img/title-logo.png">
 </head>
 <body>
     <nav>
@@ -25,7 +25,7 @@
     </nav>
 
     <div class="bg-primary h-100 w-100 text-center" id="fadein">
-        <img src="img/D-logo.png">
+        <img src="img/D-logo.png" alt="logo">
     </div>
 
     <div class="bg-dark h-100 w-100" id="menu">
